--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "loggaroo",
-  "version": "1.1.2",
-  "description": "",
+  "version": "1.1.3",
+  "description": "Automagically log info and errors to your console and log files.",
   "keywords": [
     "winston",
     "logging",
