--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loggaroo",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "description": "Automagically log info and errors to your console and log files.",
   "keywords": [
     "winston",
@@ -10,7 +10,7 @@
   "main": "./distribution/index.js",
   "homepage": "https://github.com/tomanagle/loggaroo",
   "scripts": {
-    "build": "babel src --presets babel-preset-es2015 --out-dir distribution",
+    "build": "yarn tsc",
     "prepublish": "npm run build"
   },
   "author": "Tom Nagle <tomanagle@gmail.com>",
@@ -20,7 +20,7 @@
     "winston": "^3.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "@types/node": "^11.9.0",
+    "typescript": "^3.3.3"
   }
 }
